--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
 dependencies = [
     "rospy",
     "numpy",
+    "vamp @ git+https://github.com/KavrakiLab/vamp.git",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
