--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 dependencies = [
     "rospy",
     "numpy",
-    "vamp @ git+https://github.com/KavrakiLab/vamp.git",
+    "vamp @ git+https://github.com/AdaCompNUS/vamp.git",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
