--- a/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/CMakeLists.txt
+++ b/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/CMakeLists.txt
@@ -7,6 +7,11 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   message_generation
+  tf2_ros
+  tf2
+  tf2_geometry_msgs
+  sensor_msgs
+  nav_msgs
 )
 
 catkin_python_setup()
@@ -29,6 +34,11 @@ catkin_package(
   std_msgs
   geometry_msgs
   message_generation
+  tf2_ros
+  tf2
+  tf2_geometry_msgs
+  sensor_msgs
+  nav_msgs
 )
 
 include_directories(
@@ -47,16 +57,18 @@ include_directories(
 # add_dependencies(fetch_api ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-# add_executable(fetch_api_node src/fetch_api_node.cpp)
+add_executable(fetch_whole_body_controller_node 
+  src/fetch_whole_body_controller/whole_body_controller_node.cpp
+  src/fetch_whole_body_controller/whole_body_controller.cpp
+)
 
 ## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(fetch_api_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(fetch_whole_body_controller_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(fetch_api_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(fetch_whole_body_controller_node
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
@@ -73,11 +85,11 @@ include_directories(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS fetch_api fetch_api_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(TARGETS fetch_whole_body_controller_node
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
@@ -87,11 +99,11 @@ include_directories(
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+install(FILES
+  launch/whole_body_controller.launch
+  config/whole_body_controller.yaml
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 
 #############
 ## Testing ##
