--- a/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/package.xml
+++ b/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/package.xml
@@ -15,6 +15,11 @@
   <depend>std_msgs</depend>
   <depend>message_generation</depend>
   <depend>message_runtime</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
 
   <export>
   </export>
