--- a/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/CMakeLists.txt
+++ b/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/CMakeLists.txt
@@ -56,19 +56,7 @@ include_directories(
 ## either from message generation or dynamic reconfigure
 # add_dependencies(fetch_api ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-## Declare a C++ executable
-add_executable(fetch_whole_body_controller_node 
-  src/fetch_whole_body_controller/whole_body_controller_node.cpp
-  src/fetch_whole_body_controller/whole_body_controller.cpp
-)
-
-## Add cmake target dependencies of the executable
-add_dependencies(fetch_whole_body_controller_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-target_link_libraries(fetch_whole_body_controller_node
-  ${catkin_LIBRARIES}
-)
+# C++ executable for whole body controller has been replaced by Python implementation
 
 #############
 ## Install ##
@@ -78,18 +66,14 @@ target_link_libraries(fetch_whole_body_controller_node
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
 ## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(PROGRAMS
+  src/fetch_whole_body_controller/whole_body_controller_mpc.py
+  scripts/whole_body_controller_mpc
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables and/or libraries for installation
-install(TARGETS fetch_whole_body_controller_node
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+# C++ executable has been removed in favor of Python implementation
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
@@ -101,7 +85,9 @@ install(TARGETS fetch_whole_body_controller_node
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 install(FILES
   launch/whole_body_controller.launch
+  launch/whole_body_controller_mpc.launch
   config/whole_body_controller.yaml
+  config/whole_body_controller_mpc.yaml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
