--- a/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/config/whole_body_controller_mpc.yaml
+++ b/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/config/whole_body_controller_mpc.yaml
@@ -1,8 +1,8 @@
 # MPC Controller Parameters
 
 # Control parameters
-control_rate: 20.0
-prediction_horizon: 20
+control_rate: 10.0
+prediction_horizon: 10
 
 # Velocity limits
 max_linear_vel: 1.5
@@ -23,10 +23,19 @@ joint_names:
 
 max_joint_velocities: [0.1, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
 
-# MPC cost weights
-Q_state: 10.0
-R_control: 1.0
-R_smooth: 0.0
-P_terminal: 1.0 
+# MPC cost weights - State weights (x, y, theta, torso_joint, 7 arm_joints)
+Q_state: [10.0, 10.0, 10.0, 10.0, 10.0, 10.0, 10.0, 10.0, 10.0, 10.0]
+
+# Control input weights - Different weights for base and arm
+# Control weights (base_linear, base_angular, torso_joint, 7 arm_joints)
+R_control: [2.0, 3.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0]
+
+# Obstacle avoidance parameters
+lidar_max_range: 1.5                # Maximum range to consider for obstacle detection (meters)
+safe_distance: 0.5                  # Minimum safe distance from obstacles (meters)
+voxel_size: 0.3                     # Size of voxels for point cloud clustering (meters)
+max_obstacle_points: 10             # Maximum number of obstacle points to consider
+obstacle_weight: 100.0              # Weight for obstacle avoidance constraints
+slack_obstacle_weight: 200.0        # Weight for obstacle slack variables
 
 debug: true
