fix start position error

--- a/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/CMakeLists.txt
+++ b/rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(fetch_drivers)
 
+## Find catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
@@ -16,20 +17,15 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_python_setup()
 
-# add_service_files(
-#     FILES
-#     CartesianGoal.srv
-# )
-
+## Generate messages, services, etc.
 generate_messages(
     DEPENDENCIES
     std_msgs
     geometry_msgs
 )
 
+## Catkin Package
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES fetch_api
   CATKIN_DEPENDS roscpp rospy
   std_msgs
   geometry_msgs
@@ -41,65 +37,58 @@ catkin_package(
   nav_msgs
 )
 
+## Build
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
 )
 
-## Declare a C++ library
-# add_library(fetch_api
-#   src/${PROJECT_NAME}/fetch_api.cpp
-# )
-
-## Add cmake target dependencies of the library
-## as an example, code may need to be generated before libraries
-## either from message generation or dynamic reconfigure
-# add_dependencies(fetch_api ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-# C++ executable for whole body controller has been replaced by Python implementation
+# NOTE: C++ library/executables are commented out as we are using Python implementations.
 
 #############
 ## Install ##
 #############
 
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
+# Mark executable Python scripts for installation.
+# Assumes your scripts are in the 'scripts' directory of your package.
 install(PROGRAMS
-  src/fetch_whole_body_controller/whole_body_controller_mpc.py
+  # The original MPC controller script
   scripts/whole_body_controller_mpc
+  # ADDED: The new Chained Form controller script
+  scripts/whole_body_controller_chained
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-## Mark executables and/or libraries for installation
-# C++ executable has been removed in favor of Python implementation
 
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-install(FILES
-  launch/whole_body_controller.launch
-  launch/whole_body_controller_mpc.launch
-  config/whole_body_controller.yaml
-  config/whole_body_controller_mpc.yaml
+# Mark launch files, config files, etc. for installation.
+install(DIRECTORY
+  launch/
+  config/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+# The above install(DIRECTORY ...) is a modern, cleaner way to install all files
+# from a directory. If you prefer the old file-by-file method, use the block below.
+# I have updated it to include all necessary files.
+#
+# install(FILES
+#   # --- NEW & RECOMMENDED LAUNCH FILE ---
+#   launch/start_whole_body_controller.launch
+#
+#   # --- CONFIG FILES FOR BOTH CONTROLLERS ---
+#   config/whole_body_controller_mpc.yaml
+#   config/whole_body_controller_chained.yaml # ADDED
+#
+#   # --- OLD/REDUNDANT FILES (can be removed if no longer needed) ---
+#   # launch/whole_body_controller_mpc.launch
+#   # config/whole_body_controller.yaml
+#   # launch/whole_body_controller.launch
+#
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
+
 
 #############
 ## Testing ##
 #############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_fetch_api.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+# Testing targets are commented out for this example.
