--- a/rls_fetch_ws/src/apps/low_level_planning/package.xml
+++ b/rls_fetch_ws/src/apps/low_level_planning/package.xml
@@ -16,6 +16,7 @@
   <build_depend>tf</build_depend>
   <build_depend>robot_controllers_interface</build_depend>
   <build_depend>robot_controllers</build_depend>
+  <build_depend>robot_localization</build_depend>
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -25,6 +26,7 @@
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>robot_controllers_interface</build_export_depend>
   <build_export_depend>robot_controllers</build_export_depend>
+  <build_export_depend>robot_localization</build_export_depend>
 
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -34,6 +36,7 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>robot_controllers_interface</exec_depend>
   <exec_depend>robot_controllers</exec_depend>
+  <exec_depend>robot_localization</exec_depend>
 
   <export>
     <!-- Other tools can request additional information be placed here -->
